2006-02-10  Ross Burton  <ross@openedhand.com>

	* data/Makefile.am:
	* data/nokia-770.png:
	* data/nokia-770.xml:
	Add the start of a Nokia 770 skin.

2006-02-10  Ross Burton  <ross@openedhand.com>

	* src/main.c:
	* src/callbacks.c:
	Use NULL rather than 0 to end execl() so that GCC doesn't
	complain.

2005-09-30  Ross Burton  <ross@openedhand.com>

	* data/Xoo.glade:
	* src/main.c:
	* src/fakedev.h:
	Don't set the device image as the back buffer for the fixed
	window, but rather use a GtkImage like normal people.

2005-09-05  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	* NEWS:
	Version 0.7.

2005-08-15  Ross Burton  <ross@openedhand.com>

	* src/main.c:
	* src/callbacks.c:
	* src/fakedev.h:
	Various fixes for themeing.  Set the size of the fixed widget not
	the window so the image doesn't get clipped by the size of the
	menu bar, and hide the menu bar when turning off decorations.
	
2005-01-28  mallum,,,  <mallum@openedhand.com>

	* src/Makefile.am:
	* src/callbacks.c: (on_select_device):
	Lower case binary name, Xoo -> xoo

2005-01-28  mallum,,,  <mallum@openedhand.com>

	* src/button.c:
	* src/callbacks.c: (on_about_activate), (on_delete_event_hide),
	(on_select_device):
	* src/callbacks.h:
	* src/config.c: (config_get_val):
	* src/fakedev.h:
	* src/keys.c: (keys_xnest_connect):
	* src/main.c: (fakeapp_new), (fakeapp_create_gui):
	* src/prefs.c: (on_prefs_apply_clicked):
	* src/prefs.h:
	Just run through gnu indent.	

2005-01-28  mallum,,,  <mallum@openedhand.com>

	* configure.ac:
	Bump Up version

	* data/Makefile.am:
	* data/xoo.desktop:
	* data/xoo.svg:
	Add an icon for .dotdesktop

	* data/Xoo.glade:
	* src/callbacks.c: (on_about_activate), (on_delete_event_hide):
	* src/callbacks.h:
	* src/fakedev.h:
	* src/main.c: (fakeapp_new), (fakeapp_create_gui), (key_event),
	(fakeapp_start_server), (fakeapp_catch_sigchild),
	(fakeapp_restart_server), (usage), (main):
	* src/prefs.c: (gconf_prefs_init), (on_prefs_apply_clicked):
	* src/prefs.h: